--- a/package.json
+++ b/package.json
@@ -10,88 +10,98 @@
     "start:prod": "cross-env NODE_ENV=production npx env-cmd --silent next start",
     "analyze": "cross-env ANALYZE=true next build",
     "________________ FORMAT AND LINT ________________": "",
+    "lint": "eslint .",
+    "lint:fix": "npm run lint -- --fix",
+    "lint:staged": "lint-staged",
     "ts:check": "tsc --noEmit",
-    "lint": "./node_modules/.bin/eslint .",
-    "lint:fix": "./node_modules/.bin/eslint . --fix",
     "check": "npm run ts:check && npm run lint",
     "________________ OTHER ________________": "",
     "gen": "graphql-codegen --require dotenv/config --config codegen.yml",
     "update": "npx ncu -u && npx rimraf node_modules package-lock.json && npm i --legacy-peer-deps",
     "prepare": "husky install",
+    "postupdate": "npm run check && npm run lint:fix",
     "extract-translations": "npx i18next 'src/**/*.{tsx,ts}' -c i18next-parser.config.ts"
   },
   "dependencies": {
-    "@apollo/client": "^3.8.6",
-    "@emotion/react": "^11.11.1",
-    "@emotion/styled": "^11.11.0",
-    "@fontsource/roboto": "^5.0.8",
-    "@hookform/resolvers": "^3.3.2",
-    "@mui/icons-material": "^5.14.14",
-    "@mui/lab": "^5.0.0-alpha.149",
-    "@mui/material": "^5.14.14",
+    "@apollo/client": "^3.11.4",
+    "@emotion/react": "^11.13.3",
+    "@emotion/styled": "^11.13.0",
+    "@fontsource/roboto": "^5.0.14",
+    "@hookform/resolvers": "^3.9.0",
+    "@mui/icons-material": "^5.16.7",
+    "@mui/lab": "^5.0.0-alpha.173",
+    "@mui/material": "^5.16.7",
     "@mui/styled-engine-sc": "^5.14.12",
-    "@mui/x-date-pickers": "^6.16.3",
-    "@mui/x-date-pickers-pro": "^6.16.3",
-    "@next/bundle-analyzer": "^13.5.6",
-    "@sentry/nextjs": "^7.74.1",
-    "@vercel/og": "^0.5.20",
-    "apollo3-cache-persist": "^0.14.1",
-    "axios": "^1.6.1",
-    "date-fns": "^2.30.0",
-    "dayjs": "^1.11.10",
-    "dotenv": "^16.3.1",
+    "@mui/x-date-pickers": "^7.13.0",
+    "@mui/x-date-pickers-pro": "^7.13.0",
+    "@next/bundle-analyzer": "^14.2.6",
+    "@sentry/nextjs": "^8.26.0",
+    "@vercel/og": "^0.6.2",
+    "apollo3-cache-persist": "^0.15.0",
+    "axios": "^1.7.4",
+    "date-fns": "^3.6.0",
+    "dayjs": "^1.11.13",
+    "dotenv": "^16.4.5",
     "env-cmd": "^10.1.0",
-    "graphql": "^16.8.1",
-    "i18next": "^23.6.0",
-    "next": "13.5.6",
+    "graphql": "^16.9.0",
+    "i18next": "^23.14.0",
+    "next": "14.2.6",
     "next-compose-plugins": "^2.2.1",
-    "next-i18next": "^14.0.3",
-    "next-language-detector": "^1.0.2",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
-    "react-hook-form": "^7.47.0",
-    "react-i18next": "^13.3.1",
-    "sharp": "^0.32.6",
-    "socket.io-client": "^4.7.2",
-    "styled-components": "^6.1.0",
-    "uuid": "^9.0.1",
-    "yup": "^1.3.2",
-    "zustand": "^4.4.4"
+    "next-i18next": "^15.3.1",
+    "next-language-detector": "^1.1.0",
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1",
+    "react-hook-form": "^7.52.2",
+    "react-i18next": "^15.0.1",
+    "sharp": "^0.33.5",
+    "socket.io-client": "^4.7.5",
+    "styled-components": "^6.1.12",
+    "uuid": "^10.0.0",
+    "yup": "^1.4.0",
+    "zustand": "^4.5.5"
   },
   "devDependencies": {
-    "@graphql-codegen/add": "^5.0.0",
-    "@graphql-codegen/cli": "5.0.0",
-    "@graphql-codegen/schema-ast": "^4.0.0",
-    "@graphql-codegen/typescript": "4.0.1",
-    "@graphql-codegen/typescript-operations": "4.0.1",
-    "@graphql-codegen/typescript-react-apollo": "4.0.0",
-    "@jetbrains/eslint-config": "^5.4.1",
-    "@types/node": "^20.8.7",
-    "@types/react": "^18.2.31",
-    "@types/react-dom": "^18.2.14",
-    "@types/styled-components": "^5.1.29",
-    "@types/uuid": "^9.0.6",
-    "@typescript-eslint/eslint-plugin": "^6.9.0",
-    "@typescript-eslint/parser": "^6.9.0",
+    "@graphql-codegen/add": "^5.0.3",
+    "@graphql-codegen/cli": "5.0.2",
+    "@graphql-codegen/schema-ast": "^4.1.0",
+    "@graphql-codegen/typescript": "4.0.9",
+    "@graphql-codegen/typescript-operations": "4.2.3",
+    "@graphql-codegen/typescript-react-apollo": "4.3.0",
+    "@jetbrains/eslint-config": "^5.4.2",
+    "@types/node": "^22.5.0",
+    "@types/react": "^18.3.4",
+    "@types/react-dom": "^18.3.0",
+    "@types/styled-components": "^5.1.34",
+    "@types/uuid": "^10.0.0",
+    "@typescript-eslint/eslint-plugin": "^8.2.0",
+    "@typescript-eslint/parser": "^8.2.0",
     "cross-env": "^7.0.3",
-    "eslint": "8.52.0",
+    "eslint": "^8.57.0",
     "eslint-config-next": "^13.5.6",
-    "eslint-config-prettier": "^9.0.0",
+    "eslint-plugin-sonarjs": "^0.25.1",
+    "eslint-config-prettier": "^9.1.0",
     "eslint-plugin-comments": "^1.0.0",
     "eslint-plugin-eslint-comments": "^3.2.0",
-    "eslint-plugin-no-secrets": "^0.8.9",
-    "eslint-plugin-prettier": "^5.0.1",
-    "eslint-plugin-promise": "^6.1.1",
-    "eslint-plugin-react": "^7.33.2",
-    "eslint-plugin-security": "^1.7.1",
-    "eslint-plugin-simple-import-sort": "^10.0.0",
-    "eslint-plugin-sonarjs": "^0.21.0",
-    "eslint-plugin-unicorn": "^48.0.1",
-    "husky": "^8.0.3",
-    "i18next-parser": "^8.9.0",
-    "npm-check-updates": "^16.14.6",
-    "prettier": "^3.0.3",
-    "ts-node": "^10.9.1",
-    "typescript": "^5.2.2"
+    "eslint-plugin-import": "^2.29.1",
+    "eslint-plugin-no-secrets": "^1.0.2",
+    "eslint-plugin-prettier": "^5.2.1",
+    "eslint-plugin-promise": "^7.1.0",
+    "eslint-plugin-react": "^7.35.0",
+    "eslint-plugin-react-hooks": "^4.6.2",
+    "eslint-plugin-react-refresh": "^0.4.9",
+    "eslint-plugin-security": "^3.0.1",
+    "eslint-plugin-simple-import-sort": "^12.1.1",
+    "eslint-plugin-unicorn": "^55.0.0",
+    "husky": "^9.1.5",
+    "i18next-parser": "^9.0.2",
+    "lint-staged": "^15.2.9",
+    "npm-check-updates": "^17.1.0",
+    "prettier": "^3.3.3",
+    "ts-node": "^10.9.2",
+    "typescript": "^5.5.4"
+  },
+  "lint-staged": {
+    "*.{ts,tsx,js,jsx}": "npm run check",
+    "*.{json,md,html,xml,yml,yaml,mdx}": "prettier --write"
   }
 }
