--- a/package.json
+++ b/package.json
@@ -23,39 +23,39 @@
     "extract-translations": "npx i18next 'src/**/*.{tsx,ts}' -c i18next-parser.config.ts"
   },
   "dependencies": {
-    "@apollo/client": "^3.11.4",
+    "@apollo/client": "^3.11.5",
     "@emotion/react": "^11.13.3",
     "@emotion/styled": "^11.13.0",
     "@fontsource/roboto": "^5.0.14",
     "@hookform/resolvers": "^3.9.0",
-    "@mui/icons-material": "^5.16.7",
-    "@mui/lab": "^5.0.0-alpha.173",
-    "@mui/material": "^5.16.7",
-    "@mui/styled-engine-sc": "^5.14.12",
-    "@mui/x-date-pickers": "^7.13.0",
-    "@mui/x-date-pickers-pro": "^7.13.0",
-    "@next/bundle-analyzer": "^14.2.6",
-    "@sentry/nextjs": "^8.26.0",
+    "@mui/icons-material": "^6.0.1",
+    "@mui/lab": "^6.0.0-beta.8",
+    "@mui/material": "^6.0.1",
+    "@mui/styled-engine-sc": "^6.0.1",
+    "@mui/x-date-pickers": "^7.15.0",
+    "@mui/x-date-pickers-pro": "^7.15.0",
+    "@next/bundle-analyzer": "^14.2.7",
+    "@sentry/nextjs": "^8.27.0",
     "@vercel/og": "^0.6.2",
     "apollo3-cache-persist": "^0.15.0",
-    "axios": "^1.7.4",
+    "axios": "^1.7.7",
     "date-fns": "^3.6.0",
     "dayjs": "^1.11.13",
     "dotenv": "^16.4.5",
     "env-cmd": "^10.1.0",
     "graphql": "^16.9.0",
     "i18next": "^23.14.0",
-    "next": "14.2.6",
+    "next": "14.2.7",
     "next-compose-plugins": "^2.2.1",
     "next-i18next": "^15.3.1",
     "next-language-detector": "^1.1.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
-    "react-hook-form": "^7.52.2",
+    "react-hook-form": "^7.53.0",
     "react-i18next": "^15.0.1",
     "sharp": "^0.33.5",
     "socket.io-client": "^4.7.5",
-    "styled-components": "^6.1.12",
+    "styled-components": "^6.1.13",
     "uuid": "^10.0.0",
     "yup": "^1.4.0",
     "zustand": "^4.5.5"
@@ -68,16 +68,16 @@
     "@graphql-codegen/typescript-operations": "4.2.3",
     "@graphql-codegen/typescript-react-apollo": "4.3.0",
     "@jetbrains/eslint-config": "^5.4.2",
-    "@types/node": "^22.5.0",
-    "@types/react": "^18.3.4",
+    "@types/node": "^22.5.2",
+    "@types/react": "^18.3.5",
     "@types/react-dom": "^18.3.0",
     "@types/styled-components": "^5.1.34",
     "@types/uuid": "^10.0.0",
-    "@typescript-eslint/eslint-plugin": "^8.2.0",
-    "@typescript-eslint/parser": "^8.2.0",
+    "@typescript-eslint/eslint-plugin": "^8.4.0",
+    "@typescript-eslint/parser": "^8.4.0",
     "cross-env": "^7.0.3",
     "eslint": "^8.57.0",
-    "eslint-config-next": "^13.5.6",
+    "eslint-config-next": "^14.2.7",
     "eslint-plugin-sonarjs": "^0.25.1",
     "eslint-config-prettier": "^9.1.0",
     "eslint-plugin-comments": "^1.0.0",
@@ -88,14 +88,14 @@
     "eslint-plugin-promise": "^7.1.0",
     "eslint-plugin-react": "^7.35.0",
     "eslint-plugin-react-hooks": "^4.6.2",
-    "eslint-plugin-react-refresh": "^0.4.9",
+    "eslint-plugin-react-refresh": "^0.4.11",
     "eslint-plugin-security": "^3.0.1",
     "eslint-plugin-simple-import-sort": "^12.1.1",
     "eslint-plugin-unicorn": "^55.0.0",
     "husky": "^9.1.5",
     "i18next-parser": "^9.0.2",
-    "lint-staged": "^15.2.9",
-    "npm-check-updates": "^17.1.0",
+    "lint-staged": "^15.2.10",
+    "npm-check-updates": "^17.1.1",
     "prettier": "^3.3.3",
     "ts-node": "^10.9.2",
     "typescript": "^5.5.4"
