Update && Impl run "npm run check" parallel

--- a/package.json
+++ b/package.json
@@ -18,24 +18,26 @@
     "________________ OTHER ________________": "",
     "gen": "graphql-codegen --require dotenv/config --config codegen.yml",
     "update": "npx ncu -u && npx rimraf node_modules package-lock.json && npm i --legacy-peer-deps",
-    "prepare": "husky install",
+    "prepare": "husky",
     "postupdate": "npm run check && npm run lint:fix",
     "extract-translations": "npx i18next 'src/**/*.{tsx,ts}' -c i18next-parser.config.ts"
   },
   "dependencies": {
-    "@apollo/client": "^3.11.5",
+    "@apollo/client": "^3.11.8",
+    "@babel/plugin-transform-class-properties": "^7.25.4",
+    "@babel/plugin-transform-object-rest-spread": "^7.24.7",
     "@emotion/react": "^11.13.3",
     "@emotion/styled": "^11.13.0",
-    "@fontsource/roboto": "^5.0.14",
+    "@fontsource/roboto": "^5.1.0",
     "@hookform/resolvers": "^3.9.0",
-    "@mui/icons-material": "^6.0.1",
-    "@mui/lab": "^6.0.0-beta.8",
-    "@mui/material": "^6.0.1",
-    "@mui/styled-engine-sc": "^6.0.1",
-    "@mui/x-date-pickers": "^7.15.0",
-    "@mui/x-date-pickers-pro": "^7.15.0",
-    "@next/bundle-analyzer": "^14.2.7",
-    "@sentry/nextjs": "^8.27.0",
+    "@mui/icons-material": "^6.1.0",
+    "@mui/lab": "^6.0.0-beta.9",
+    "@mui/material": "^6.1.0",
+    "@mui/styled-engine-sc": "^6.1.0",
+    "@mui/x-date-pickers": "^7.17.0",
+    "@mui/x-date-pickers-pro": "^7.17.0",
+    "@next/bundle-analyzer": "^14.2.11",
+    "@sentry/nextjs": "^8.30.0",
     "@vercel/og": "^0.6.2",
     "apollo3-cache-persist": "^0.15.0",
     "axios": "^1.7.7",
@@ -44,15 +46,15 @@
     "dotenv": "^16.4.5",
     "env-cmd": "^10.1.0",
     "graphql": "^16.9.0",
-    "i18next": "^23.14.0",
-    "next": "14.2.7",
+    "i18next": "^23.15.1",
+    "next": "14.2.11",
     "next-compose-plugins": "^2.2.1",
     "next-i18next": "^15.3.1",
     "next-language-detector": "^1.1.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-hook-form": "^7.53.0",
-    "react-i18next": "^15.0.1",
+    "react-i18next": "^15.0.2",
     "sharp": "^0.33.5",
     "socket.io-client": "^4.7.5",
     "styled-components": "^6.1.13",
@@ -66,39 +68,40 @@
     "@graphql-codegen/schema-ast": "^4.1.0",
     "@graphql-codegen/typescript": "4.0.9",
     "@graphql-codegen/typescript-operations": "4.2.3",
-    "@graphql-codegen/typescript-react-apollo": "4.3.0",
+    "@graphql-codegen/typescript-react-apollo": "4.3.2",
     "@jetbrains/eslint-config": "^5.4.2",
-    "@types/node": "^22.5.2",
+    "@types/node": "^22.5.5",
     "@types/react": "^18.3.5",
     "@types/react-dom": "^18.3.0",
     "@types/styled-components": "^5.1.34",
     "@types/uuid": "^10.0.0",
-    "@typescript-eslint/eslint-plugin": "^8.4.0",
-    "@typescript-eslint/parser": "^8.4.0",
+    "@typescript-eslint/eslint-plugin": "^8.5.0",
+    "@typescript-eslint/parser": "^8.5.0",
     "cross-env": "^7.0.3",
     "eslint": "^8.57.0",
-    "eslint-config-next": "^14.2.7",
-    "eslint-plugin-sonarjs": "^0.25.1",
+    "eslint-config-next": "^14.2.11",
     "eslint-config-prettier": "^9.1.0",
     "eslint-plugin-comments": "^1.0.0",
     "eslint-plugin-eslint-comments": "^3.2.0",
-    "eslint-plugin-import": "^2.29.1",
+    "eslint-plugin-import": "^2.30.0",
     "eslint-plugin-no-secrets": "^1.0.2",
     "eslint-plugin-prettier": "^5.2.1",
     "eslint-plugin-promise": "^7.1.0",
-    "eslint-plugin-react": "^7.35.0",
+    "eslint-plugin-react": "^7.36.1",
     "eslint-plugin-react-hooks": "^4.6.2",
-    "eslint-plugin-react-refresh": "^0.4.11",
+    "eslint-plugin-react-refresh": "^0.4.12",
     "eslint-plugin-security": "^3.0.1",
     "eslint-plugin-simple-import-sort": "^12.1.1",
+    "eslint-plugin-sonarjs": "^0.25.1",
     "eslint-plugin-unicorn": "^55.0.0",
-    "husky": "^9.1.5",
+    "husky": "^9.1.6",
     "i18next-parser": "^9.0.2",
     "lint-staged": "^15.2.10",
     "npm-check-updates": "^17.1.1",
+    "npm-run-all": "^4.1.5",
     "prettier": "^3.3.3",
     "ts-node": "^10.9.2",
-    "typescript": "^5.5.4"
+    "typescript": "^5.6.2"
   },
   "lint-staged": {
     "*.{ts,tsx,js,jsx}": "npm run check",
